# new-image-tiler

./: CHANGELOG.md  PROJECT.md  README.md  index.html  install-tauri-cli.sh  package.json  pnpm-lock.yaml  tailwind.config.js  upgrade-tauri.sh  vite.config.ts
.coolify/: Dockerfile  deploy.yaml  nginx.conf
.github/: copilot-instructions.md  prompt.md
.github/workflows/: release.yml
public/: manifest.json
src/: App.css  App.tsx  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json  fs.json
src-tauri/src/: lib.rs  main.rs
src/components/: CarbonAds.tsx
src/components/features/dropzone/: image-dropzone.tsx
src/components/ui/: button.tsx
src/hooks/: use-image-processing.ts
src/lib/: batch-utils.ts  canvas-utils.ts  image-utils.ts  tiling-utils.ts
src/workers/: image-processor.ts
